--- a/pages/order/order_index/order_index.wxss
+++ b/pages/order/order_index/order_index.wxss
@@ -64,7 +64,8 @@ Page {
 /* 列表 */
 
 .list {
-  margin-top: 203rpx;
+  /* margin-top: 203rpx; */
+  margin-top: 112rpx;
   position: relative;
   z-index: 1;
 }
