--- a/pages/order/cart_busi/cart_busi.wxml
+++ b/pages/order/cart_busi/cart_busi.wxml
@@ -24,7 +24,10 @@
           </view>
           
           <view class="yuan_wrap flexCenter flexBetween">
-            <view>
+            <view wx:if="{{item.rewardFeeYuan}}">
+              {{item.rewardFeeYuan}}元<text decode="{{true}}">&nbsp;&nbsp;</text>x<text decode="{{true}}">&nbsp;</text><text>{{item.count}}</text>
+            </view>
+            <view wx:else>
               {{item.priceFeeYuan}}元<text decode="{{true}}">&nbsp;&nbsp;</text>x<text decode="{{true}}">&nbsp;</text><text>{{item.count}}</text>
             </view>
             <view bindtap="openEditPriceModal"
@@ -167,7 +170,10 @@
     <view class="flexColumn editprice_modal">
       <view class="price_item">
         <view class="price_item_label">当前价格(元)：</view>
-        <view wx:if="{{lookingIndex!==null}}" class="price_item_input">{{oldSelectedGoodsList[lookingIndex].priceFeeYuan}}</view>
+        <view wx:if="{{lookingIndex!==null}}" class="price_item_input">
+          <text wx:if="{{oldSelectedGoodsList[lookingIndex].rewardFeeYuan}}">{{oldSelectedGoodsList[lookingIndex].rewardFeeYuan}}</text>
+          <text wx:else>{{oldSelectedGoodsList[lookingIndex].priceFeeYuan}}</text>
+        </view>
       </view>
       <view class="price_item">
         <view class="price_item_label">修改价格(元)：</view>
