--- a/pages/order/choose2_search/choose2_search.wxml
+++ b/pages/order/choose2_search/choose2_search.wxml
@@ -48,7 +48,8 @@
           </view>
           
           <view class="yuan_wrap flexCenter flexBetween">
-            <view>{{item.priceFeeYuan}}元</view>
+            <view wx:if="{{item.rewardFeeYuan}}">{{item.rewardFeeYuan}}元</view>
+            <view wx:else>{{item.priceFeeYuan}}元</view>
             <van-stepper value="{{item.count}}" 
               min="{{0}}"
               bind:change="onChangeStep" 
