--- a/pages/order/choose2_single/choose2_single.wxml
+++ b/pages/order/choose2_single/choose2_single.wxml
@@ -57,7 +57,8 @@
               </view>
               
               <view class="yuan_wrap flexCenter flexBetween">
-                <view>{{item.priceFeeYuan}}元</view>
+                <view wx:if="{{item.rewardFeeYuan}}">{{item.rewardFeeYuan}}元</view>
+                <view wx:else>{{item.priceFeeYuan}}元</view>
               </view>
             </view>
           </view>
