--- a/pages/order/order_index/order_index.wxml
+++ b/pages/order/order_index/order_index.wxml
@@ -3,7 +3,7 @@
   <!-- 固定 -->
   <view class="top">
     <!-- 搜索 -->
-    <view class="search_wrap bg_white">
+    <!-- <view class="search_wrap bg_white">
       <view class="search_content flexCenter">
         <van-icon name="search" 
           size="1.5em" 
@@ -14,7 +14,7 @@
           confirm-type='搜索'
         ></input>
       </view>
-    </view>
+    </view> -->
 
     <!-- 状态 -->
     <view class="nav">
@@ -60,7 +60,8 @@
             
             <view class="yuan_wrap flexCenter flexBetween">
               <view>
-                {{itm.priceFeeYuan}}元
+                <text wx:if="{{itm.rewardFeeYuan}}">{{itm.rewardFeeYuan}}元</text>
+                <text wx:else>{{itm.priceFeeYuan}}元</text>
                 <text wx:if="{{navIndex==1&&item.orderStatus==50}}"><text decode="{{true}}">&nbsp;</text>x{{itm.goodsCount}}</text>
               </view>
             </view>
