--- a/pages/order/cart/cart.wxml
+++ b/pages/order/cart/cart.wxml
@@ -24,7 +24,7 @@
           </view>
           
           <view class="yuan_wrap flexCenter flexBetween">
-            <view wx:if="{{item.rewardFeeYuan}}">{{item.rewardFeeYuan}}元</view>
+            <view wx:if="{{item.priceFeeActivityYuan}}">{{item.priceFeeActivityYuan}}元</view>
             <view wx:else>{{item.priceFeeYuan}}元</view>
             <view bindtap="openEditPriceModal"
               data-index="{{index}}"
@@ -170,7 +170,7 @@
       <view class="price_item">
         <view class="price_item_label">当前价格(元)：</view>
         <view wx:if="{{lookingIndex!==null}}" class="price_item_input">
-          <text wx:if="{{selectedList[lookingIndex].rewardFeeYuan}}">{{selectedList[lookingIndex].rewardFeeYuan}}</text>
+          <text wx:if="{{selectedList[lookingIndex].priceFeeActivityYuan}}">{{selectedList[lookingIndex].priceFeeActivityYuan}}</text>
           <text wx:else>{{selectedList[lookingIndex].priceFeeYuan}}</text>
         </view>
       </view>
