--- a/pages/order/choose2_single/choose2_single.wxml
+++ b/pages/order/choose2_single/choose2_single.wxml
@@ -57,7 +57,7 @@
               </view>
               
               <view class="yuan_wrap flexCenter flexBetween">
-                <view wx:if="{{item.rewardFeeYuan}}">{{item.rewardFeeYuan}}元</view>
+                <view wx:if="{{item.priceFeeActivityYuan}}">{{item.priceFeeActivityYuan}}元</view>
                 <view wx:else>{{item.priceFeeYuan}}元</view>
               </view>
             </view>
