--- a/pages/order/order_detail_busi/order_detail_busi.wxml
+++ b/pages/order/order_detail_busi/order_detail_busi.wxml
@@ -211,6 +211,7 @@
       bind:input="onInputTimePicker"
       bind:cancel="onCloseTimePicker"
       bind:confirm="onConfirmTimePicker"
+      formatter="{{formatterPicker}}"
     />
   </van-popup>
 </view>
