--- a/pages/order/doing_search_detail/doing_search_detail.wxml
+++ b/pages/order/doing_search_detail/doing_search_detail.wxml
@@ -19,7 +19,7 @@
         data-goods="{{item}}"
         data-index="{{index}}"
       >
-        <view>{{item.goodsName}}</view>
+        <view class="textOmit">{{item.goodsName}}</view>
         <van-icon name="arrow" custom-style="position:relative;top:2rpx;" />
       </view>
     </view>
